--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
+<meta name="description" content="description"/>
+<meta name="keywords" content="keywords"/>
+<meta name="author" content="author"/>
+<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
+<title>EMERGE 2024 Workshop</title>
+</head>
+
+<body>
+
+<div class="container">
+
+	<div class="main">
+
+		<div class="header">
+
+			<div class="title">
+				<h1><b>EMERGE 2024</b></h1>
+				<h2>Enabling Machine Learning Operations for next-Gen Embedded Wireless Networked Devices <br> December 10, 2024 </h2>
+			</div>
+
+
+		</div>
+
+		<div class="content">
+
+			<div class="item">
+
+				<h1>1st Workshop on Enabling Machine Learning Operations for next-Gen Embedded Wireless Networked Devices</h1>
+				<h2>Dec 10, St. Regis Abu Dhabi, Abu Dhabi, UAE</h2>
+
+				<p><br><br><b>EMERGE 2024</b> is a satellite workshop of the <a href="https://ewsn24.tii.ae/">International Conference on Embedded Wireless Systems and Networks</a></p>
+
+				<p>This workshop seeks to bridge ML researchers and IoT experts to explore interdisciplinary approaches for developing ML algorithms and pipelines suited to IoT's unique constraints. It aims to address the complexities of implementing MLOps in environments where resources are a premium. </p>
+				<p>We invite contributions to the following areas: </p>
+				<ul>
+					<li>MLOps for resource-constrained IoT Systems </li>
+					<li>Privacy preservation within resource-constrained ML Pipelines</li>
+					<li>Useful tools and programming languages for deploying ML systems</li>
+					<li>Federated Learning and TinyML with on-board training</li>
+					<li>Deploying Continuous Learning strategies in ML systems</li>
+					<li>Continual learning, reinforcement learning</li>
+					<li>CI/CD pipelines for ML systems</li>
+					<li>Data challenges for deployed ML systems</li>
+					<li>Open problems in ML systems; challenges and blockers to the successful deployment of ML systems</li>
+					<li>Lightweight and real-time monitoring of ML systems</li>
+					<li>Self-Supervised Learning for Unsupervised IoT Data</li>
+					<li>Deploying hardware accelerators for ML pipelines in IoT systems</li>
+					<li>Benchmarking ultra-low power machine learning systems</li>
+					<li>Resource-efficient and adaptive deep learning</li>
+				</ul>
+			</div>
+
+		</div>
+
+		<div class="sidenav">
+
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="program.html">Program</a></li>
+				<li><a href="cfp.html">Call for Papers</a></li>
+				<li><a href="submission.html">Submission Instructions</a></li>
+				<li><a href="organizers.html">Organizers</a></li>
+			</ul>
+
+
+		</div>
+
+		<div class="clearer"><span></span></div>
+
+	</div>
+
+	<div class="footer">
+
+		<span class="left">&copy; 2024 <a href="index.html">EMERGE Workshop</a>. <a href="https://vikpe.org/archive/arcsin-web-templates/">Website template</a> by <a href="https://arcsin.se/">Arcsin</a></span>
+
+		
+
+		<div class="clearer"><span></span></div>
+
+	</div>
+
+</div>
+
+</body>
+
+</html>
