--- a/organizers.html
+++ b/organizers.html
@@ -32,12 +32,39 @@
 
 				<h1>Organizers</h1>
 				<br>
+
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tbody>
+						<tr>
+							<td width="30%"><a href="https://wp.doc.ic.ac.uk/aese/people/dr-michael-breza/" target="_blank"><descr>Michael Breza</descr></a></td>
+							<td width="70%"><descr>Imperial College London, United Kingdom</descr></td>
+						</tr>
+	
+						<tr>
+							<td width="30%"><a href="https://users.utcluj.ro/~ancapop/" target="_blank"><descr>Anca Hangan</descr></a><br></td>
+							<td width="70%"><descr>Technical University of Cluj-Napoca, Romania</descr><br></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><a href="http://mramona.github.io/" target="_blank"><descr>Ramona Marfievici</descr></a><br></td>
+							<td width="70%"><descr>Digital Catapult, London, UK</descr><br></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><a href="https://ioannismavromatis.com/" target="_blank"><descr>Ioannis Mavromatis</descr></a><br></td>
+							<td width="70%"><descr>Digital Catapult, London, UK</descr><br></td>
+						</tr>
+
+					</tbody>
+				</table>
+
+				<br><br>
 				
-                <p>Dr. <b></b><a href="https://wp.doc.ic.ac.uk/aese/people/dr-michael-breza/">Michael Breza</a></b> is a Research Fellow design, application, management and security of  Wireless Sensing Systems used for Industrial, Logistics and Control applications with the AESE group in the Department of Computing, Imperial College London.</p>
+                <!-- <p>Dr. <b></b><a href="https://wp.doc.ic.ac.uk/aese/people/dr-michael-breza/">Michael Breza</a></b> is a Research Fellow design, application, management and security of  Wireless Sensing Systems used for Industrial, Logistics and Control applications with the AESE group in the Department of Computing, Imperial College London.</p>
                 <p>Dr. <b></b><a href="https://users.utcluj.ro/~ancapop/">Anca Hangan</a></b> obtained the PhD degree from the Technical University of Cluj-Napoca, Romania on the topic of parallel and distributed systems with real-time constraints. She  holds an associate professor position at the Computer Science Department, at the Technical University of Cluj-Napoca. Her research interests are mainly directed towards monitoring and data processing in the context of cyber-physical systems, with focus on anomaly detection in IoT data.</p> 
                 <p>Dr. <b></b><a href="https://mramona.github.io/">Ramona Marfievici</a></b> is a Principal IoT Engineer at Digital Catapult, London, UK. She has 15+ years of deep technical expertise across wireless sensors networks, IoT devices and communications, in R&D and IoT solutions development. She serves on the IoT Committee of the British Standards Institute contributing to the development of standards for IoT interoperability, security, and digital twins. Her research interests are in the area of IoT and cyber-physical systems (CPS), with a focus on experimentation methodologies and benchmarking.</p>
                 <p>Dr. <b></b><a href="https://ioannismavromatis.com/">Ioannis Mavromatis</a></b> is a Lead 5G/Future Networks Technologist at Digital Catapult, London, UK, working on 5G-and-beyond technologies, cloud-native computing, testbed deployments, and more. Dr Mavromatis received his PhD in "5G Connected and Automated Vehicles", and led the backend architect and development UMBRELLA framework while working at Bristol Research and Innovation Laboratory of Toshiba Europe Ltd. He has been involved in several projects (SYNERGIA, CAVShield, BEACON-5G, FLOURISH, VENTURER, etc.), working on 5G-and-beyond Communications, Cloud-native Computing, Cybersecurity, Machine Learning & Federated Learning, and Sustainability.</p>
-                
+                 -->
 				<h1>Technical Program Committee</h1>
 				<br>
 
@@ -47,7 +74,15 @@
 				<h1>Web chair</h1>
 				<br>
 
-				<p><a href="https://www.linkedin.com/in/dragos-bogdan-lazea-22893a222/">Dragos Lazea</a></p>
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tbody>
+						<tr>
+							<td width="30%"><a href="https://www.linkedin.com/in/dragos-bogdan-lazea-22893a222/" target="_blank"><descr>Dragos Lazea</descr></a></td>
+							<td width="70%"><descr>Technical University of Cluj-Napoca, Romania</descr></td>
+						</tr>
+					</tbody>
+				</table>
+
 			</div>
 
 		</div>
