--- a/organizers.html
+++ b/organizers.html
@@ -63,7 +63,63 @@
 				<h1>Technical Program Committee</h1>
 				<br>
 
-				<h2>TBD</h2>
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tbody>
+						<tr>
+							<td width="30%"><descr>Ionut Anghel</descr></a></td>
+							<td width="70%"><descr>Technical University of Cluj-Napoca, RO</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Tudor Cioara</descr></a></td>
+							<td width="70%"><descr>Technical University of Cluj-Napoca, RO</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Zsolt Istvan</descr></a></td>
+							<td width="70%"><descr>TU Darmstadt, DE</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Aftab Khan</descr></a></td>
+							<td width="70%"><descr>Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Peizheng Li</descr></a></td>
+							<td width="70%"><descr>Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Anca Marginean</descr></a></td>
+							<td width="70%"><descr>Technical University of Cluj-Napoca, RO</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Olga Saukh</descr></a></td>
+							<td width="70%"><descr>Graz University of Technology, AU</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Daniel Situnayake</descr></a></td>
+							<td width="70%"><descr>Edge Impulse, USA</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Sandra Silby</descr></a></td>
+							<td width="70%"><descr>NYU Abu Dhabi, UAE</descr></td>
+						</tr>
+
+						<tr>
+							<td width="30%"><descr>Pinar Tozun</descr></a></td>
+							<td width="70%"><descr>IT University of Copenhagen, DK</descr></td>
+						</tr>
+
+	
+						
+
+					</tbody>
+				</table>
 				<br><br>
 
 				<h1>Web chair</h1>
