added submission link

--- a/submission.html
+++ b/submission.html
@@ -36,6 +36,8 @@
                 <p>Submitted papers must contain at most 6 pages (8.5" x 11" (letter) two-column format, using 10-point type on 11-point leading, with a maximum text block of 7" wide x 9" deep with an intercolumn spacing of .25"). Submissions with a page size of 11.7 x 8.3 " (297 x 210 mm / A4) will not be accepted. The page limits include figures, tables, and references. Authors may use the ACM templates for convenience (e.g., on Overleaf <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">here</a>). All submissions must be written in English and should contain the authors' names, affiliations, and contact information. The submission Website is available at the link: link-to-be-defined.</p>
                 <p>Accepted papers will be included in the conference proceedings. The proceedings will be indexed in the ACM Digital Library, SCOPUS, and other prominent digital libraries. Authors of accepted papers are expected to present their work in a plenary session as part of the main workshop program. </p>
 
+				<p>Papers must be submitted electronically through <a href="https://emerge24.hotcrp.com/">HotCRP</a>.</p>
+
 				<table>
 					<tbody>
 						<tr align="left">
