added submission link

--- a/submission.html
+++ b/submission.html
@@ -44,24 +44,24 @@
 							<td colspan="2"><h2>Important Dates</h2><br></td>
 							<td></td>
 						</tr>
-						<tr align="left">
+						<tr align="left" style="color:red;">
 							<td><b></b></td>
-							<td width="40%"><b>Paper submission:</b></td>
-							<td>June 30, 2024 (AoE, 23:59 UTC-12)</td>
+							<td width="45%"><b>Paper submission [EXTENDED]:</b></td>
+							<td>July 21, 2024 (AoE, 23:59 UTC-12)</td>
 						</tr>
 						<tr align="left">
 							<td><b></b></td>
-							<td width="40%"><b>Notification of acceptance:</b></td>
+							<td width="45%"><b>Notification of acceptance:</b></td>
 							<td>September 10, 2024</td>
 						</tr>
 						<tr align="left">
 							<td><b></b></td>
-							<td width="40%"><b>Camera-ready:</b></td>
+							<td width="45%"><b>Camera-ready:</b></td>
 							<td>October 6, 2024</td>
 						</tr>
 						<tr align="left">
 							<td><b></b></td>
-							<td width="40%"><b>Workshop date:</b></td>
+							<td width="45%"><b>Workshop date:</b></td>
 							<td> December 10, 2024</td>
 						</tr>
 						
