added camera-ready instructions and tentative program

--- a/cfp.html
+++ b/cfp.html
@@ -56,7 +56,7 @@
 				<table>
 					<tbody>
 						<tr align="left">
-							<td colspan="2"><h2>Important Dates</h2><br></td>
+							<td colspan="2"><h3>Important Dates</h3><br></td>
 							<td></td>
 						</tr>
 						<tr align="left" style="color:red;">
@@ -93,7 +93,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
-				<li><a href="submission.html">Submission Instructions</a></li>
+				<li><a href="submission.html">Camera-ready Instructions</a></li>
+				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
 
