--- a/program.html
+++ b/program.html
@@ -30,10 +30,59 @@
 
 			<div class="item">
 
-				<h1>Workshop Program
+				<h1>Tentative Workshop Program
                 </h1>
 
-                <h2>TBD</h2>
+				<br>
+
+				<table>
+					<tbody>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Paper submission [EXTENDED]:</b></td> -->
+							<td><b>Opening Remarks</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Notification of acceptance:</b></td> -->
+							<td><b>Keynote</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Camera-ready:</b></td> -->
+							<td><b>Technical session 1</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Workshop date:</b></td> -->
+							<td><b>Lunch</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Workshop date:</b></td> -->
+							<td><b>Technical session 2</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Workshop date:</b></td> -->
+							<td><b>Open discussions</b></td>
+						</tr>
+						<tr align="left">
+							<td><b></b></td>
+							<td><b></b></td>
+							<!-- <td width="45%"><b>Workshop date:</b></td> -->
+							<td><b>Closing Remarks</b></td>
+						</tr>
+						
+					</tbody>
+
+				</table>
 			</div>
 
 		</div>
@@ -44,7 +93,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
-				<li><a href="submission.html">Submission Instructions</a></li>
+				<li><a href="submission.html">Camera-ready Instructions</a></li>
+				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
 
