--- a/submission.html
+++ b/submission.html
@@ -30,18 +30,20 @@
 
 			<div class="item">
 
-				<h1>Submission Instructions</h1>
+				<h1>Camera-ready Instructions</h1>
 				<br>
 				
-                <p>Submitted papers must contain at most 6 pages (8.5" x 11" (letter) two-column format, using 10-point type on 11-point leading, with a maximum text block of 7" wide x 9" deep with an intercolumn spacing of .25"). Submissions with a page size of 11.7 x 8.3 " (297 x 210 mm / A4) will not be accepted. The page limits include figures, tables, and references. Authors may use the ACM templates for convenience (e.g., on Overleaf <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">here</a>). All submissions must be written in English and should contain the authors' names, affiliations, and contact information. The submission Website is available at the link: <a href="https://emerge24.hotcrp.com/">HotCRP</a>.</p>
-                <p>Accepted papers will be included in the conference proceedings. The proceedings will be indexed in the ACM Digital Library, SCOPUS, and other prominent digital libraries. Authors of accepted papers are expected to present their work in a plenary session as part of the main workshop program. </p>
-
-				<p>Papers must be submitted electronically through <a href="https://emerge24.hotcrp.com/">HotCRP</a>.</p>
+                <!-- <p>Submitted papers must contain at most 6 pages (8.5" x 11" (letter) two-column format, using 10-point type on 11-point leading, with a maximum text block of 7" wide x 9" deep with an intercolumn spacing of .25"). Submissions with a page size of 11.7 x 8.3 " (297 x 210 mm / A4) will not be accepted. The page limits include figures, tables, and references. Authors may use the ACM templates for convenience (e.g., on Overleaf <a href="https://www.overleaf.com/latex/templates/association-for-computing-machinery-acm-sig-proceedings-template/bmvfhcdnxfty">here</a>). All submissions must be written in English and should contain the authors' names, affiliations, and contact information. The submission Website is available at the link: <a href="https://emerge24.hotcrp.com/">HotCRP</a>.</p> -->
+                <p>The instructions for the camera-ready paper can be found on EWSN's website here: <a href="https://ewsn24.tii.ae/camera-ready-instructions.html">EWSN Camera-ready Instructions.</a></p>
+				<!-- <p>Accepted papers will be included in the conference proceedings. The proceedings will be indexed in the ACM Digital Library, SCOPUS, and other prominent digital libraries. Authors of accepted papers are expected to present their work in a plenary session as part of the main workshop program. </p> -->
+				<p>Page limits: max 6 pages. These limits include references, tables, and any appendix. </p>
+				<p>The final camera-ready PDF should be submitted via <a href="https://emerge24.hotcrp.com/">HotCRP</a>.</p>
+				<p>The deadline for submitting the camera-ready is October 6.</p>
 
 				<table>
 					<tbody>
 						<tr align="left">
-							<td colspan="2"><h2>Important Dates</h2><br></td>
+							<td colspan="2"><h3>Important Dates</h3><br></td>
 							<td></td>
 						</tr>
 						<tr align="left" style="color:red;">
@@ -78,7 +80,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
-				<li><a href="submission.html">Submission Instructions</a></li>
+				<li><a href="submission.html">Camera-ready Instructions</a></li>
+				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
 
