--- a/organizers.html
+++ b/organizers.html
@@ -144,7 +144,8 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
-				<li><a href="submission.html">Submission Instructions</a></li>
+				<li><a href="submission.html">Camera-ready Instructions</a></li>
+				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
 
