--- a/program.html
+++ b/program.html
@@ -85,7 +85,7 @@
 			</div>
 
 			<div class="item">
-				<h3>Keynote: </h3>
+				<h3>Keynote: "Evolving MLOps for IoT: Continuous Learning, Distributed Deployment, and Monitoring"</h3>
 				<p style="font-size: 10px;"><em>Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</em></p>
 
 			</div>
