added keynote short bio

--- a/accepted.html
+++ b/accepted.html
@@ -33,45 +33,29 @@
 				<h1>Accepted Papers</h1>
 				<br>
 
-                <p style="font-size: 10px;"><b><em>Efficient and Effective Multi-Objective AutoML for Industrial Data Analytics</em></b><br>
+                <p style="font-size: 10px;"><b>Efficient and Effective Multi-Objective AutoML for Industrial Data Analytics</b><br>
 					<span style="font-size: 9px;">Tanmay Goyal (ABB Research & Development Center, DE), Pengcheng Huang, Balz Maag (ABB Research Center, CH)</span>
 				</p>
 
-				<p style="font-size: 10px;"><b><em>FLAME: Adaptive and Reactive Concept Drift Mitigation for Federated Learning Deployments</em></b><br>
+				<p style="font-size: 10px;"><b>FLAME: Adaptive and Reactive Concept Drift Mitigation for Federated Learning Deployments</b><br>
 					<span style="font-size: 9px;">Ioannis Mavromatis (Digital Catapult, UK), Stefano De Feo (University of Bristol, UK), Aftab Khan (Toshiba Europe Ltd. Bristol, UK)</span>
 				</p>
 
-				<p style="font-size: 10px;"><b><em>MatchCurv: Communication-Efficient Decentralized Federated Learning in Heterogeneous Environments</em></b><br>
+				<p style="font-size: 10px;"><b>MatchCurv: Communication-Efficient Decentralized Federated Learning in Heterogeneous Environments</b><br>
 					<span style="font-size: 9px;">Harsha Praneeth Dussa, Janek Haberer, Olaf Landsiedel (Kiel University, DE)</span>
 				</p>
 
-				<p style="font-size: 10px;"><b><em>Customizing Pre-Processing Algorithms for Streaming Sensor Data on Embedded Networked Devices</em></b><br>
+				<p style="font-size: 10px;"><b>Customizing Pre-Processing Algorithms for Streaming Sensor Data on Embedded Networked Devices</b><br>
 					<span style="font-size: 9px;">Dragos Lazea, Tudor Cioara, Anca Hangan (Technical University of Cluj-Napoca, RO), Zsolt Istvan (Technical University of Darmstadt, DE)</span>
 				</p>
 
-				<p style="font-size: 10px;"><b><em>Breaking the Illusion: Real-world Challenges for Adversarial Patches in Object Detection</em></b><br>
+				<p style="font-size: 10px;"><b>Breaking the Illusion: Real-world Challenges for Adversarial Patches in Object Detection</b><br>
 					<span style="font-size: 9px;">Jakob Schack, Katarina Petrovic (Graz University of Technology, AU), Olga Saukh (Institute of Technical Informatics, Graz University of Technology, AU)</span>
 				</p>
 
-				<p style="font-size: 10px;"><b><em>EVs Coordination to Maximize the Usage of Local Renewable Energy</em></b><br>
+				<p style="font-size: 10px;"><b>EVs Coordination to Maximize the Usage of Local Renewable Energy</b><br>
 					<span style="font-size: 9px;">Cristina Pop, Viorica Chifu, Anamaria Raita, Tudor Cioara, Ionut Anghel, Marius Joldos (Technical University of Cluj-Napoca, RO)</span>
 				</p>
-
-                <!-- <h3><em>FLAME: Adaptive and Reactive Concept Drift Mitigation for Federated Learning Deployments</em></h3>
-                <p style="font-size: 10px;">Ioannis Mavromatis (Digital Catapult, UK), Stefano De Feo (University of Bristol, UK), Aftab Khan (Toshiba Europe Ltd. Bristol, UK)</p> -->
-
-                <!-- <h3><em>MatchCurv: Communication-Efficient Decentralized Federated Learning in Heterogeneous Environments</em></h3>
-                <p style="font-size: 10px;">Harsha Praneeth Dussa, Janek Haberer, Olaf Landsiedel (Kiel University, DE)</p> -->
-
-                <!-- <h3><em>Customizing Pre-Processing Algorithms for Streaming Sensor Data on Embedded Networked Devices</em></h3>
-                <p style="font-size: 10px;">Dragos Lazea, Tudor Cioara, Anca Hangan (Technical University of Cluj-Napoca, RO), Zsolt Istvan (Technical University of Darmstadt, DE)</p>
-                 -->
-
-                <!-- <h3><em>Breaking the Illusion: Real-world Challenges for Adversarial Patches in Object Detection</em></h3>
-                <p style="font-size: 10px;">Jakob Schack, Katarina Petrovic (Graz University of Technology, AU), Olga Saukh (Institute of Technical Informatics, Graz University of Technology, AU)</p> -->
-            
-                <!-- <h3><em>EVs Coordination to Maximize the Usage of Local Renewable Energy</em></h3>
-                <p style="font-size: 10px;">Cristina Pop, Viorica Chifu, Anamaria Raita, Tudor Cioara, Ionut Anghel, Marius Joldos (Technical University of Cluj-Napoca, RO)</p> -->
                 
 			</div>
 
