--- a/program.html
+++ b/program.html
@@ -38,38 +38,48 @@
 				<table cellpadding="0" cellspacing="0" width="100%">
 					<tbody>
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>11:00-11:10</b></td>
-							<td width="70%">Opening Remarks</td>
+							<td width="30%" style="background-color: #f2f2f2; font-size: 10px;"><b><br>&emsp;&emsp;11:00-13:00</b></td>
+							<td width="70%" style="background-color: #f2f2f2; font-size: 10px;"><b>&emsp;&emsp;EMERGE Morning session <br> &emsp;&emsp;Chair: </b> Ramona Marfievici <br> <b>&emsp;&emsp;Room: </b> Al Khaznah 1 </b> </td>
+						</tr>
+
+						<tr align="left" style="height: 22px;">
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;11:00-11:10</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Opening Remarks</td>
 						</tr>
 						
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>11:10-12:10</b></td>
-							<td width="70%">Keynote</td>
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;11:10-12:10</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Keynote</td>
 						</tr>
 
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>12:10-12:55</b></td>
-							<td width="70%">Technical session 1</td>
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;12:10-12:55</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Technical session 1 (x3 15')</td>
 						</tr>
 
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>13:00-14:00</b></td>
-							<td width="70%">Lunch</td>
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;13:00-14:00</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Lunch - Location: The Terrace on the Corniche</td>
 						</tr>
 
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>14:00-14:45</b></td>
-							<td width="70%">Technical session 2</td>
+							<td width="30%" style="background-color: #f2f2f2; font-size: 10px;"><b><br>&emsp;&emsp;14:00-15:20</b></td>
+							<td width="70%" style="background-color: #f2f2f2; font-size: 10px;"><b>&emsp;&emsp;EMERGE Afternoon session <br> &emsp;&emsp;Chair: </b> Anca Hangan <br> <b>&emsp;&emsp;Room: </b> Al Khaznah 1 </b> </td>
 						</tr>
 
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>14:45-15:15</b></td>
-							<td width="70%">Open discussions</td>
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;14:00-14:45</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Technical session 2 (x3 15')</td>
 						</tr>
 
 						<tr align="left" style="height: 22px;">
-							<td width="30%"><b>15:15-15:20</b></td>
-							<td width="70%">Closing Remarks</td>
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;14:45-15:15</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Open discussions</td>
+						</tr>
+
+						<tr align="left" style="height: 22px;">
+							<td width="30%" style="font-size: 10px;"><b>&emsp;&emsp;15:15-15:20</b></td>
+							<td width="70%" style="font-size: 10px;">&emsp;&emsp;Closing Remarks</td>
 						</tr>
 						
 					</tbody>
@@ -88,7 +98,7 @@
 					<tbody>
 						<tr align="left" style="height: 200px;">
 							<td width="20%"><img src="img/keynote.png" height="100"></td>
-							<td width="80%"><p style="font-size: 10px;">Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</p>
+							<td width="80%"><p style="font-size: 10px;"><b>Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</b></p>
 								<p style="font-size: 10px;">Dr. Aftab Khan holds a Ph.D. in machine learning from the University of
 								Surrey, U.K., and is a recognized leader in Distributed AI with over a
 								decade of experience in both academia and industry. Currently the
