added keynote abstract

--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@
 			<div class="item">
 				<!-- <h3>Keynote: "Evolving MLOps for IoT: Continuous Learning, Distributed Deployment, and Monitoring"</h3>
 				<p style="font-size: 10px;">Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</p> -->
-				<h3>Keynote: <br> Evolving
+				<h3>Keynote <br> Evolving
 					MLOps for IoT: Continuous Learning, Distributed Deployment, and
 					Monitoring</h3>
 				<br>
@@ -99,7 +99,23 @@
 						<tr align="left" style="height: 200px;">
 							<td width="20%"><img src="img/keynote.png" height="100"></td>
 							<td width="80%"><p style="font-size: 10px;"><b>Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</b></p>
-								<p style="font-size: 10px;">Dr. Aftab Khan holds a Ph.D. in machine learning from the University of
+								<p style="font-size: 10px;"><b>Abstract:</b> The integration of machine learning and IoT has created unprecedented
+									opportunities, but it also presents complex challenges in scaling,
+									deployment, and monitoring. This keynote explores the transformative
+									potential of MLOps in IoT systems, emphasizing its evolution and
+									critical components: continuous learning, distributed deployment, and
+									monitoring. We will examine how these practices enable dynamic
+									adaptation to evolving data, support scalable solutions across
+									heterogeneous devices, and ensure reliable performance in diverse
+									environments. Highlighting real-world applications, the talk will
+									address key industry challenges while exploring current gaps and future
+									directions in MLOps for IoT. By identifying opportunities for research
+									and innovation to tackle pressing issues, this session offers a
+									forward-looking perspective on unlocking the full potential of
+									intelligence within future IoT ecosystems, whether you are navigating
+									the technical intricacies of IoT or shaping strategy in this domain.</p>
+								
+								<p style="font-size: 10px;"><b>Bio:</b> Dr. Aftab Khan holds a Ph.D. in machine learning from the University of
 								Surrey, U.K., and is a recognized leader in Distributed AI with over a
 								decade of experience in both academia and industry. Currently the
 								Distributed AI Programme Leader at Toshiba Europe's Bristol Research
