added awards page

--- a/awards.html
+++ b/awards.html
@@ -30,33 +30,21 @@
 
 			<div class="item">
 
-				<h1>Accepted Papers</h1>
+				<h1>Awards
+                </h1>
+
 				<br>
 
-                <p style="font-size: 10px;"><b>Efficient and Effective Multi-Objective AutoML for Industrial Data Analytics</b><br>
-					<span style="font-size: 9px;">Tanmay Goyal (ABB Research & Development Center, DE), Pengcheng Huang, Balz Maag (ABB Research Center, CH)</span>
-				</p>
-
-				<p style="font-size: 10px;"><b>FLAME: Adaptive and Reactive Concept Drift Mitigation for Federated Learning Deployments</b><br>
-					<span style="font-size: 9px;">Ioannis Mavromatis (Digital Catapult, UK), Stefano De Feo (University of Bristol, UK), Aftab Khan (Toshiba Europe Ltd. Bristol, UK)</span>
-				</p>
-
+				<h4>&#11088; BEST PRESENTATION </h4>
 				<p style="font-size: 10px;"><b>MatchCurv: Communication-Efficient Decentralized Federated Learning in Heterogeneous Environments</b><br>
-					<span style="font-size: 9px;">Harsha Praneeth Dussa, Janek Haberer, Olaf Landsiedel (Kiel University, DE)</span>
+					Harsha Praneeth Dussa, <b>Janek Haberer</b>, Olaf Landsiedel (Kiel University, DE)<br>
 				</p>
+				<br>
 
-				<p style="font-size: 10px;"><b>Customizing Pre-Processing Algorithms for Streaming Sensor Data on Embedded Networked Devices</b><br>
-					<span style="font-size: 9px;">Dragos Lazea, Tudor Cioara, Anca Hangan (Technical University of Cluj-Napoca, RO), Zsolt Istvan (Technical University of Darmstadt, DE)</span>
+				<h4>&#11088; BEST PRESENTATION RUNNER-UP </h4>
+				<p style="font-size: 10px;"><b>Efficient and Effective Multi-Objective AutoML for Industrial Data Analytics</b><br>
+					<b>Tanmay Goyal</b> (ABB Research & Development Center, DE), Pengcheng Huang, Balz Maag (ABB Research Center, CH)<br>
 				</p>
-
-				<p style="font-size: 10px;"><b>Breaking the Illusion: Real-world Challenges for Adversarial Patches in Object Detection</b><br>
-					<span style="font-size: 9px;">Jakob Schack, Katarina Petrovic (Graz University of Technology, AU), Olga Saukh (Institute of Technical Informatics, Graz University of Technology, AU)</span>
-				</p>
-
-				<p style="font-size: 10px;"><b>EVs Coordination to Maximize the Usage of Local Renewable Energy</b><br>
-					<span style="font-size: 9px;">Cristina Pop, Viorica Chifu, Anamaria Raita, Tudor Cioara, Ionut Anghel, Marius Joldos (Technical University of Cluj-Napoca, RO)</span>
-				</p>
-                
 			</div>
 
 		</div>
@@ -72,8 +60,6 @@
 				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
-
-
 
 
 		</div>
