--- a/cfp.html
+++ b/cfp.html
@@ -92,11 +92,13 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
+                <li><a href="awards.html">Awards</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
 				<li><a href="submission.html">Camera-ready Instructions</a></li>
 				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
+
 
 
 		</div>
