--- a/program.html
+++ b/program.html
@@ -88,23 +88,6 @@
 			</div>
 
 			<div class="item">
-				<h3>Awards</h3>
-				<br>
-				
-				<h4>&#11088; BEST PRESENTATION </h4>
-				<p style="font-size: 10px;"><b>MatchCurv: Communication-Efficient Decentralized Federated Learning in Heterogeneous Environments</b><br>
-					Harsha Praneeth Dussa, <b>Janek Haberer</b>, Olaf Landsiedel (Kiel University, DE)<br>
-				</p>
-				<br>
-
-				<h4>&#11088; BEST PRESENTATION RUNNER-UP </h4>
-				<p style="font-size: 10px;"><b>Efficient and Effective Multi-Objective AutoML for Industrial Data Analytics</b><br>
-					<b>Tanmay Goyal</b> (ABB Research & Development Center, DE), Pengcheng Huang, Balz Maag (ABB Research Center, CH)<br>
-				</p>
-				
-			</div>
-
-			<div class="item">
 				<!-- <h3>Keynote: "Evolving MLOps for IoT: Continuous Learning, Distributed Deployment, and Monitoring"</h3>
 				<p style="font-size: 10px;">Dr Aftab Khan, Bristol Research and Innovation Laboratory, Toshiba Europe Ltd., UK</p> -->
 				<h3>Keynote <br> Evolving
@@ -201,11 +184,13 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="program.html">Program</a></li>
+                <li><a href="awards.html">Awards</a></li>
 				<li><a href="cfp.html">Call for Papers</a></li>
 				<li><a href="submission.html">Camera-ready Instructions</a></li>
 				<li><a href="accepted.html">Accepted Papers</a></li>
 				<li><a href="organizers.html">Organizers</a></li>
 			</ul>
+
 
 
 		</div>
